# game

./: CMakeLists.txt  flake.nix  justfile
client/: justfile
client/include/: app_utils.hpp  components.hpp  constants.hpp  context.hpp  debug.hpp  elements.hpp  error.hpp  layout.hpp  memory_arena.hpp  observers.hpp  phases.hpp  pipelines.hpp  scenes.hpp  systems.hpp  theme_engine.hpp  user_interface.hpp
client/net/: Cargo.toml
client/net/src/: connect.rs  error.rs  lib.rs  state.rs  update.rs
client/src/: app_utils.cpp  clay_raylib.cpp  components.cpp  document.cpp  error.cpp  main.cpp  memory_arena.cpp  phases.cpp  pipelines.cpp  theme_engine.cpp
client/src/layout_components/: chat_bubble.cpp  chat_event.cpp  login_button.cpp  login_input.cpp  message_input.cpp  navbar.cpp  navbar_button.cpp  send_button.cpp
client/src/layout_pages/: _pages.cpp  chat.cpp  debug.cpp  login.cpp
client/src/observers/: _observers.cpp  game_quit.cpp  scene_manager.cpp
client/src/scenes/: game.cpp  main_menu.cpp
client/src/systems/: _systems.cpp  controller.cpp  global_events.cpp
client/src/systems/render/: _render.cpp
client/src/user_interface/: game.cpp  main_menu.cpp
common/: Cargo.toml
common/include/common/: common.hpp  context.hpp  elements.hpp  error.hpp  theme_engine.hpp
common/src/: constants.rs  debug.rs  document.cpp  error.cpp  lib.rs  theme_engine.cpp  utils.rs
data/: packet.fbs
net/: CMakeLists.txt  Cargo.toml  justfile
net/src/: client.rs  constants.rs  debug.rs  error.rs  lib.rs  server.rs
server/: test.http
server/src/: command.rs  connect_token.rs  error.rs  game_server.rs  main.cpp  main.rs  state.rs  web_server.rs
