[package]
name = "net"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
colored = "3.0.0"
cxx = "1.0.188"
flatbuffers = "25.9.23"
rand = "0.9.2"
renet = "1.2.0"
renet_netcode = "1.2.0"

[build-dependencies]
cxx-build = "1.0.188"
