[package]
name = "net"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
boron_common = { path = "../../common" }
cxx = "1.0.188"
rand = "0.9.2"
renet = "1.2.0"
renet_netcode = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ureq = { version = "3.1.4", features = ["json"] }

[build-dependencies]
cxx-build = "1.0.188"
